--- a/about.html
+++ b/about.html
@@ -19,6 +19,12 @@
       <a href="contact.html">Contact</a>
     </div>
   </nav>
+  <header>
+    <h2>About GleamSIS</h2>
+    <p>
+      We are a one stop solution for all of your student information systems
+    </p>
+  </header>
 </body>
 
 </html>
