--- a/demo.html
+++ b/demo.html
@@ -27,12 +27,19 @@
     </p>
   </header>
   <main>
-    <section>
-
-    </section>
-    <section>
-
-    </section>
+    <form action="">
+      <label for="username">Username</label>
+      <input type="text" name="username" id="username" required>
+      <label for="password">Password</label>
+      <input type="text" name="password" id="password" required>
+      <label for="role">Role</label>
+      <select name="role" id="role" required>
+        <option value="admin">Admin</option>
+        <option value="staff">Staff</option>
+        <option value="student">Student</option>
+      </select>
+      <button type="submit">Log in</button>
+    </form>
   </main>
 </body>
 
